creado heart super mono y con curvitas

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-ES">
 	<head>
 		<meta charset="UTF-8">
-		<title>doll</title>
+		<title>heart</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="icon" type="image/png" href="../icono/icono_ney.png">
 	</head>
@@ -12,27 +12,10 @@
 				<img src="../icono/Ney_badges.png" alt="Ney">
 			</a>
 		</div>
-		<div class="container-0">
-		  <div class="message">
-				<h1 class="text"> I will kill you</h1>
-			</div>	
-			<div class="head" id="Color" >
-				<div id="eye-1">
-					<div class="pupil-1"></div>
-					<div class="pupil-2"></div>
-				</div>				
-				<div id="eye-2">
-					<div class="pupil-1"></div>
-					<div class="pupil-2right"></div>
-				</div>
-			</div>
-		  <div class="mouth"></div>
-			<div class="body" id="Color"></div>
-			<div class="arm1" id="Color"></div>	
-			<div class="arm2" id="Color"></div>
-			<div class="leg1" id="Color"></div>	
-		  <div class="leg2" id="Color"></div>
+		<div class="heart">
+			<div class="circle"></div>
+			<div class="halfMoon"></div>
 		</div>			
-		<script src="codigo.js"></script>
+		<!--script src="codigo.js"></script-->
   </body>
 </html>
