--- a/index.html
+++ b/index.html
@@ -12,10 +12,37 @@
 				<img src="../icono/Ney_badges.png" alt="Ney">
 			</a>
 		</div>
-		<div class="heart">
-			<div class="circle"></div>
-			<div class="halfMoon"></div>
-		</div>			
+		<div class="container">
+			<div class="col">
+				<div class="heart heart1">
+					<div class="circle"></div>
+					<div class="halfMoon"></div>
+				</div>	
+			</div>
+			<div class="col">
+				<div class="heart heart2">
+					<div class="circle"></div>
+					<div class="halfMoon"></div>
+				</div>	
+			</div>
+			<div class="col">
+				<div class="heart heart3">
+					<div class="circle"></div>
+					<div class="halfMoon"></div>
+				</div>	
+			</div>
+			<div class="col">
+				<div class="heart heart4">
+					<div class="circle"></div>
+					<div class="halfMoon"></div>
+				</div>	
+			</div>
+			<div class="col">
+				<div class="heart heart5">
+					<div class="circle"></div>
+					<div class="halfMoon"></div>
+				</div>	
+			</div>
 		<!--script src="codigo.js"></script-->
   </body>
 </html>
